switched checkout component to USP communication (instead of installment list); added USP communication to express checkout modal if payment type is not set (backwards compatibility); bugfix for express button display in sw6 off-canvas cart (too wide)

--- a/src/components/easycredit-checkout/easycredit-checkout.scss
+++ b/src/components/easycredit-checkout/easycredit-checkout.scss
@@ -80,6 +80,32 @@
     }
   }
 
+  .h4 {
+    margin-bottom: 10px;
+    color: $font-color;
+  }
+
+  &__usp {
+    list-style: none;
+    margin-top: 0;
+    margin-bottom: 20px;
+    padding: 0;
+
+    li {
+      margin-bottom: 5px;
+      padding-left: 26px;
+
+      @include background-svg($icon-checkmark-circle);
+      background-position: left center;
+      background-repeat: no-repeat;
+      background-size: 16px 16px;
+
+      font-size: $font-size-sm;
+      line-height: $line-height;
+      color: $font-color;
+    }
+  }
+
   &__instalments {
     margin: 0;
     padding: 0;
@@ -211,6 +237,17 @@
           color: rgba($link-color,.7);
         }
       }
+    }
+  }
+
+  &__small-print {
+    margin-top: 20px;
+    color: #8095AC;
+
+    small {
+      display: block;
+      font-size: $font-size-xxs;
+      line-height: $line-height;
     }
   }
 
